--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,18 @@ networks:
     internal: true
 
 services:
+  openobserve:
+    image: openobserve/openobserve:v0.10.8
+    environment:
+      ZO_ROOT_USER_EMAIL: "root@example.com"
+      ZO_ROOT_USER_PASSWORD: "Complexpass#123"
+    networks:
+      - default
+      - internal_net
+    ports:
+      - 5080:5080
+      - 5081:5081
+
   splunk:
     image: splunk/splunk:9.3.0
     environment:
@@ -157,6 +169,7 @@ services:
       - redpanda-0
       - redpanda-1
       - redpanda-2
+      - openobserve
   
   criblworker1:
     image: docker.io/cribl/cribl:4.8.1
